[package]
name = "shapes"
version = "0.1.0"
authors = ["Ares Fisher <31505781+FishAres@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.14.1"

# [workspace]
# members = [
#     "circle_packing",
# ]